Fixed build fail error from nightly feature which is unused, and Made published crates only publish when Clippy Lint passes.

--- a/.github/workflows/publish_crates_io.yml
+++ b/.github/workflows/publish_crates_io.yml
@@ -1,7 +1,10 @@
 name: Auto Publish to crates.io
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Rust Clippy Lint"]
+    types:
+      - completed
     branches:
       - master
 
