--- a/.github/workflows/publish_crates_io.yml
+++ b/.github/workflows/publish_crates_io.yml
@@ -1,12 +1,8 @@
 name: Auto Publish to crates.io
 
 on:
-  workflow_run:
-    workflows: ["Rust Clippy Lint"]
-    types:
-      - completed
-    branches:
-      - master
+  push:
+    branches: [ 'master' ]
 
 jobs:
   publish:
