--- a/.github/workflows/lint_clippy.yml
+++ b/.github/workflows/lint_clippy.yml
@@ -6,28 +6,14 @@ on:
   pull_request:
     branches: [ '*' ]
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   clippy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-
-    - name: Read Cargo.toml
-      id: cargo
-      uses: actions-rs/cargo@v1
-      with:
-        command: read-manifest
-
+    - uses: actions/checkout@v3
     - name: Run Clippy
-      uses: actions-rs/clippy-check@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        args: --all-targets -- -D warnings
+      run: cargo clippy --all-targets -- -D warnings
