--- a/.github/workflows/publish_crates_io.yml
+++ b/.github/workflows/publish_crates_io.yml
@@ -1,8 +1,12 @@
 name: Auto Publish to crates.io
 
 on:
-  push:
-    branches: [ 'master' ]
+  workflow_run:
+    workflows: ["Rust Clippy Lint"]
+    types:
+      - completed
+    branches:
+      - master
 
 jobs:
   publish:
