--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "stego_wps"
-version = "1.0.7"
+version = "1.0.8"
 edition = "2021"
 description = "A library for text-based steganography using the Words Per Sentence (WPS) method. It allows encoding and decoding hidden messages within the structure of a given text."
 repository = "https://github.com/JamesClarke7283/stego_wps"
 license-file = "LICENSE"
-keywords = ["steganography", "steganographic", "encoding", "decoding", "words-per-sentence", "wps"]
+keywords = ["steganography", "steganographic", "encoding", "decoding", "words-per-sentence"]
 
 [badges]
 maintenance = { status = "actively-developed" }
