--- a/.github/workflows/publish_crates_io.yml
+++ b/.github/workflows/publish_crates_io.yml
@@ -2,7 +2,7 @@ name: Auto Publish to crates.io
 
 on:
   workflow_run:
-    workflows: ["Rust Clippy Lint"]
+    workflows: ["Rust Tests"]
     types:
       - completed
     branches:
