--- a/.github/workflows/auto_tag_version.yml
+++ b/.github/workflows/auto_tag_version.yml
@@ -29,6 +29,11 @@ jobs:
           echo "TAG_EXISTS=true" >> $GITHUB_ENV
         else
           echo "TAG_EXISTS=false" >> $GITHUB_ENV
+      shell: /usr/bin/bash -e {0}
+      env:
+        CARGO_TERM_COLOR: always
+        CARGO_VERSION: 1.0.9
+
 
     - name: Remove previous tag if exists
       if: env.TAG_EXISTS == 'true'
