--- a/.github/workflows/auto_tag_version.yml
+++ b/.github/workflows/auto_tag_version.yml
@@ -12,9 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        token: ${{ secrets.GH_API }}
 
     - name: Extract version from Cargo.toml
       run: |
